fix text alignment
Fixes #22

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,6 +39,7 @@ h3.title a {
 
 // post list
 .post-list {
+    text-align: left;
 	ul {
 		list-style: none;
 		padding-left: 0;
